@@ -18,6 +18,7 @@ Change log 0.9 (under development)
 * Fixed a serious issue when the suppress static constructor state disappeared between chunking sessions. Fixed this for all versions of JUnit 4. This means that chunking and suppression of static initializers now work as expected.
 * The PowerMock API methods with a syntax like createPartialMockX are renamed to createXPartialMock, e.g. createPartialMockNice is renamed to createNicePartialMock to be more consistent with the normal createMock methods.
 * Added createNicePartialMockAndInvokeDefaultConstructor and createStrictPartialMockAndInvokeDefaultConstructor to the PowerMock API.
+* Updated the tutorial projects with TODO's. It should now be much easier to understand what shall be done.
 
 Change log 0.8.5 (2008-10-30)
 -----------------------------
